--- a/StageRaceFantasy/Client/Races/RaceForm.razor
+++ b/StageRaceFantasy/Client/Races/RaceForm.razor
@@ -5,6 +5,9 @@
     <p>
         <MatTextField Label="Name" @bind-Value="@race.Name" FullWidth="true" ValidationDisabled="true" />
     </p>
+    <p>
+        <MatNumericUpDownField Label="Fantasy Team Size" @bind-Value="@race.FantasyTeamSize" FullWidth="true" ValidationDisabled="true" />
+    </p>
     <div>
         <MatButton Type="submit">@ButtonText</MatButton>
     </div>
