add create and view all race stages pages

--- a/StageRaceFantasy/Client/Races/ViewRaces.razor
+++ b/StageRaceFantasy/Client/Races/ViewRaces.razor
@@ -35,6 +35,7 @@ else
             <td>
                 <MatIconButton Link="@($"races/{context.Id}/edit")" Icon="edit" />
                 <MatButton Link=@($"races/{context.Id}/entries")>Entries</MatButton>
+                <MatButton Link=@($"races/{context.Id}/stages")>Stages</MatButton>
             </td>
         </MatTableRow>
     </MatTable>
